# angela

./: Notes.md  README.md  angela.opam
example/: dune  main.ml
src/: dune  merkle.ml  merkle.mli  print.ml  tree.ml
tests/: dune  test_merkle.ml
